# aparte

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: account.rs  async_iq.rs  command.rs  conversation.rs  core.rs  image.rs  main.rs  message.rs  terminus.rs
src/mods/: bookmarks.rs  carbons.rs  completion.rs  contact.rs  conversation.rs  correction.rs  disco.rs  mam.rs  messages.rs  omemo.rs  ui.rs
src/storage/: mod.rs
src/terminus/: frame_layout.rs  input.rs  linear_layout.rs  list_view.rs  mod.rs  scroll_win.rs
terminus/: Cargo.toml
terminus/src/: cursor.rs  frame_layout.rs  input.rs  lib.rs  linear_layout.rs  list_view.rs  scroll_win.rs
